--- a/openam/openam-auth-filter/openam-authfilter-shared/pom.xml
+++ b/openam/openam-auth-filter/openam-authfilter-shared/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam-auth-filter</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <artifactId>openam-authfilter-shared</artifactId>
