--- a/openam/openam-authentication/deviceprint/module/pom.xml
+++ b/openam/openam-authentication/deviceprint/module/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam-auth-deviceprint</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <name>OpenAM Auth Device Print Module</name>
