--- a/openam/openam-authentication/deviceprint/pom.xml
+++ b/openam/openam-authentication/deviceprint/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam-authentication</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <!-- Component Definition -->
