--- a/openam/openam-documentation/openam-doc-content/pom.xml
+++ b/openam/openam-documentation/openam-doc-content/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam-documentation</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <name>OpenAM Generated Documentation Content</name>
