--- a/openam/openam-documentation/openam-doc-source/pom.xml
+++ b/openam/openam-documentation/openam-doc-source/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam-documentation</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <!-- Documentation Module -->
