--- a/openam/openam-federation/openam-idpdiscovery/pom.xml
+++ b/openam/openam-federation/openam-idpdiscovery/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam-federation</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <!-- Component Definition -->
