--- a/openam/openam-forgerock-rest/pom.xml
+++ b/openam/openam-forgerock-rest/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
     <groupId>org.forgerock.openam</groupId>
     <artifactId>openam-forgerock-rest</artifactId>
