--- a/openam/openam-ldap-utils/pom.xml
+++ b/openam/openam-ldap-utils/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <artifactId>openam-ldap-utils</artifactId>
