--- a/openam/openam-oauth2/openam-oauth2-openam-extension/pom.xml
+++ b/openam/openam-oauth2/openam-oauth2-openam-extension/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam-oauth2</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <groupId>org.forgerock.openam</groupId>
