--- a/openam/openam-tools/build-helper-plugin/pom.xml
+++ b/openam/openam-tools/build-helper-plugin/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam-tools</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
     <groupId>org.forgerock.maven.plugins</groupId>
     <artifactId>build-helper-plugin</artifactId>
