--- a/openam/openam-tools/openam-build-tools/pom.xml
+++ b/openam/openam-tools/openam-build-tools/pom.xml
@@ -31,7 +31,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam-tools</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <!-- Component Definition -->
