--- a/openam/openam-ui-ria/pom.xml
+++ b/openam/openam-ui-ria/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.forgerock.openam</groupId>
         <artifactId>openam</artifactId>
-        <version>10.2.0-SNAPSHOT</version>
+        <version>10.2.0-r6425</version>
     </parent>
 
     <artifactId>openam-ui-ria</artifactId>
