--- a/openam/pom.xml
+++ b/openam/pom.xml
@@ -57,7 +57,7 @@
     <name>OpenAM Project</name>
     <groupId>org.forgerock.openam</groupId>
     <artifactId>openam</artifactId>
-    <version>10.2.0-SNAPSHOT</version>
+    <version>10.2.0-r6425</version>
     <packaging>pom</packaging>
 
     <description>OpenAM</description>
@@ -125,9 +125,9 @@
         <commons.forgerock-util.version>1.1.0</commons.forgerock-util.version>
         <commons.json-resource.version>1.2.2</commons.json-resource.version>
         <commons.json-patch.version>1.0.0</commons.json-patch.version>
-        <forgerock.json.version>2.0.1-SNAPSHOT</forgerock.json.version>
-        <commons.authfilter.version>1.2.0-SNAPSHOT</commons.authfilter.version>
-        <forgerock-ui.version>1.0.1-SNAPSHOT</forgerock-ui.version>
+        <forgerock.json.version>2.0.1-r1044</forgerock.json.version>
+        <commons.authfilter.version>1.2.0-r1044</commons.authfilter.version>
+        <forgerock-ui.version>1.0.1-r1044</forgerock-ui.version>
         <restlet.version>2.1.1</restlet.version>
         <xercesj.version>2.11.0</xercesj.version>
         <powermock.version>1.5</powermock.version>
