--- a/openam/openam-tools/openam-build-tools/pom.xml
+++ b/openam/openam-tools/openam-build-tools/pom.xml
@@ -92,5 +92,17 @@
             <groupId>org.forgerock.openam</groupId>
             <artifactId>openam-shared</artifactId>
         </dependency>
+        // TODO verify this
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
