--- a/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect.properties
+++ b/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect.properties
@@ -3,9 +3,19 @@ header_name=Name of header referencing the ID Token
 issuer_name=Name of OpenID Connect ID Token Issuer (must match the iss field in issued jwks)
 crypto_context_type=Configuration type: please select either 1.the issuer discovery url, 2. the issuer jwk url, or 3. the client_secret
 crypto_context_value=The discovery url, or jwk url, or the client_secret, corresponding to the selection above
+profile_service_url=The optional url of the profile service
+princial_mapper_class=Pricipal mapper class
+principal_mapper_class.help=Class which implements mapping of jwt state to a Princial in local identity repository
+principal_mapper_class.help.text=Any custom implementation must implement the org.forgerock.openam.authentication.modules.oidc.PrincipalMapper interface.
+local_to_jwt_attr_mappings=Mapping of local LDAP attributes to jwt attributes
+local_to_jwt_attr_mappings.help=Format: local_ldap_attribute=jwt_attribute
+local_to_jwt_attr_mappings.help.txt=Mappings allow jwt entries to drive principal lookup. This entry determines how to translate between \
+  local LDAP attributes and the entries in the jwt.
 verification_failed=Verification of the ID Token failed.
 issuer_mismatch=The issuer configured for the module, and the issuer string in discovery document referenced by configuration url, do not match.
 token_issuer_mismatch=The issuer configured for the module, and the issuer string in the jwt, do not match.
 jwt_parse_error=The ID Token jwt specified in the header could not be parsed.
 missing_header=No ID Token was found referenced by the specified header.
 jwk_not_loaded=The json web key state could not be loaded.
+principal_mapper_instantiation_error=The principal mapper could not be instantiated.
+principal_mapping_failure=No principal in the local id repo could be found.
