--- a/openam/openam-core/src/main/resources/EntitlementException.properties
+++ b/openam/openam-core/src/main/resources/EntitlementException.properties
@@ -85,6 +85,7 @@
 246=Unable to modify application type {0} because administrator Single Sign On token is absent.
 247=Unable to save application {0} because its resources are not referred from parent.
 248=Unable to retrieve application under realm {0}.
+249=Application names must match for an update operation to succeed.
 
 250=Name for Referral privilege is missing in referral privilege.
 251=Application name to resource names mapping is missing in referral privilege.
