--- a/openam-sts/openam-rest-sts/pom.xml
+++ b/openam-sts/openam-rest-sts/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>openam-common-sts</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.forgerock.openam</groupId>
+            <artifactId>openam-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-ws-security</artifactId>
         </dependency>
