--- a/openam/openam-authentication/openam-auth-scripted/src/main/resources/amAuthScripted.properties
+++ b/openam/openam-authentication/openam-auth-scripted/src/main/resources/amAuthScripted.properties
@@ -4,10 +4,16 @@ a101=Script Type
 a101.help=The language the script is written in
 a102=Client Side Script
 a102.help=Option to toggle whether the client side script will be run
-a103=Client Side Script
-a103.help=The client side script
-a104=Server Side Script
-a104.help=The server side script
+a103=Client Script Equals Symbol
+a103.help=The symbol used between the KEY and VALUE in each data item returned from the script, e.g. \
+  the equals in "value=example"
+a104=Client Script Delimiter Symbol
+a104.help=The symbol used to separate KEY-VALUE pairs in the data returned from the script, e.g. \
+  the semi-colon in "value=example;otherValue=otherExample"
+a105=Client Side Script
+a105.help=The client side script
+a106=Server Side Script
+a106.help=The server side script
 choice1=Java Script
 choice2=Groovy
 language-not-supported=The chosen Scripting Language is not supported
