--- a/openam-core/src/main/resources/amConsole.properties
+++ b/openam-core/src/main/resources/amConsole.properties
@@ -4535,7 +4535,9 @@ oauth2.configured.title=OAuth2 Configured for the given realm
 configuring.oauth2.waiting=Waiting on OAuth2 Configuration
 
 rest.sts.keystore.section.title=Keystore Configuration
-rest.sts.keystore.filename=Keystore Filename
+rest.sts.keystore.filename=Keystore Path
+rest.sts.keystore.filename.help=Provide either the full filesystem path to a filesystem resident keystore, or a \
+  deployment-relative path to a keystore bundled in the OpenAM .war file.
 rest.sts.keystore.password=Keystore Password
 rest.sts.keystore.EncryptionKeyAlias=Encryption Key Alias
 rest.sts.keystore.EncryptionKeyPassword=Encryption Key Password
@@ -4544,54 +4546,97 @@ rest.sts.keystore.SignatureKeyPassword=Signature Key Password
 
 rest.sts.saml2.section.title=Issued SAML2 Token Configuration
 rest.sts.saml2.NameIdFormat=NameIdFormat
-rest.sts.saml2.TokenLifetime=Token Lifetime(seconds)
+rest.sts.saml2.TokenLifetime=Token Lifetime(seconds - default=600)
 rest.sts.saml2.CustomConditionsProviderClassName=Custom Conditions Provider Class Name (optional)
-rest.sts.saml2.CustomConditionsProviderClassName.help.txt=If the Conditions of the issued SAML2 assertion \
+rest.sts.saml2.CustomConditionsProviderClassName.help=If the Conditions of the issued SAML2 assertion \
   needs to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.ConditionsProvider \
   interface, and specify the class name of the implementation here.
 rest.sts.saml2.CustomSubjectProviderClassName=Customs Subject Provider Class Name (optional)
-rest.sts.saml2.CustomSubjectProviderClassName.help.txt=If the Subject of the issued SAML2 assertion \
+rest.sts.saml2.CustomSubjectProviderClassName.help=If the Subject of the issued SAML2 assertion \
   needs to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.SubjectProvider \
   interface, and specify the class name of the implementation here.
 rest.sts.saml2.CustomAuthenticationStatementsClassName=Custom AuthenticationStatements Class Name (optional)
-rest.sts.saml2.CustomAuthenticationStatementsClassName.help.txt=If the AuthenticationStatements of the issued SAML2 assertion \
+rest.sts.saml2.CustomAuthenticationStatementsClassName.help=If the AuthenticationStatements of the issued SAML2 assertion \
   need to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.AuthenticationStatementsProvider \
   interface, and specify the class name of the implementation here.
 rest.sts.saml2.CustomAttributeStatementsClassName=Custom AttributeStatements Class Name (optional)
-rest.sts.saml2.CustomAttributeStatementsClassName.help.txt=If the AttributeStatements of the issued SAML2 assertion \
+rest.sts.saml2.CustomAttributeStatementsClassName.help=If the AttributeStatements of the issued SAML2 assertion \
   need to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.AttributeStatementsProvider \
   interface, and specify the class name of the implementation here.
 rest.sts.saml2.CustomAuthorizationDecisionStatementsClassName=Custom Authorization Decision Statements Class Name (optional)
-rest.sts.saml2.CustomAuthorizationDecisionStatementsClassName.help.txt=If the AuthorizationDecisionStatements of the issued SAML2 assertion \
+rest.sts.saml2.CustomAuthorizationDecisionStatementsClassName.help=If the AuthorizationDecisionStatements of the issued SAML2 assertion \
   need to be customized, implement the org.forgerock.openam.sts.tokengeneration.saml2.statements.AuthzDecisionStatementsProvider \
   interface, and specify the class name of the implementation here.
 rest.sts.saml2.CustomAttributeMapperClassName=Custom Attribute Mapper Class Name (optional)
-rest.sts.saml2.CustomAttributeMapperClassName.help.txt=If the class implementing attribute mapping for attributes \
+rest.sts.saml2.CustomAttributeMapperClassName.help=If the class implementing attribute mapping for attributes \
   contained in the issued SAML2 assertion needs to be customized, implement the \
   org.forgerock.openam.sts.tokengeneration.saml2.statements.AttributeMapper interface, and specify the class name of \
   the implementation here.
 rest.sts.saml2.CustomAuthenticationContextMapperClassName=Custom Authentication Context Class Name (optional)
-rest.sts.saml2.CustomAuthenticationContextMapperClassName.help.txt=If the AuthnContext mapping implemented by the \
+rest.sts.saml2.CustomAuthenticationContextMapperClassName.help=If the AuthnContext mapping implemented by the \
   org.forgerock.openam.sts.token.provider.AuthnContextMapperImpl class, implement the \
   org.forgerock.openam.sts.token.provider.AuthnContextMapper interface, and specify the name of the implementation here.
-rest.sts.saml2.CanonicalizationAlgorithm=Canonicalization Algorithm (optional)
-rest.sts.saml2.CanonicalizationExcNoComments=W3C Exclusive Canonicalization without Comments
-rest.sts.saml2.CanonicalizationExcWithComments=W3C Exclusive Canonicalization with Comments
-rest.sts.saml2.SignatureAlgorithm=Signature Algorithm (optional)
-rest.sts.saml2.SignatureAlgorithm.help.txt=If no custom algorithm is specified, either http://www.w3.org/2000/09/xmldsig#dsa-sha1 or \
-  http://www.w3.org/2000/09/xmldsig#rsa-sha1 is used, depending upon the type of the private key
-rest.sts.saml2.SignatureDsaSha1=dsa sha1
-rest.sts.saml2.SignatureRsaSha1=rsa sha1
-rest.sts.saml2.SignAssertion=Sign Assertion?
+rest.sts.saml2.CanonicalizationAlgorithm=Canonicalization Algorithm (http://www.w3.org/2001/10/xml-exc-c14n# is default)
+rest.sts.saml2.CanonicalizationExcNoComments=http://www.w3.org/2001/10/xml-exc-c14n#
+rest.sts.saml2.CanonicalizationExcWithComments=http://www.w3.org/2001/10/xml-exc-c14n#WithComments
+rest.sts.saml2.SignatureAlgorithm=Signature Algorithm
+rest.sts.saml2.SignatureAlgorithm.help=If no custom algorithm is specified, either http://www.w3.org/2000/09/xmldsig#dsa-sha1 or \
+  http://www.w3.org/2000/09/xmldsig#rsa-sha1 is used, depending upon the type of the private key referenced by the \
+  signature key alias in the Keystore configuration.
+rest.sts.saml2.SignatureKeyDetermined=Determined by Signing Key
+rest.sts.saml2.SignatureDsaSha1=http://www.w3.org/2000/09/xmldsig#dsa-sha1
+rest.sts.saml2.SignatureRsaSha1=http://www.w3.org/2000/09/xmldsig#rsa-sha1
+rest.sts.saml2.SignAssertion=Sign Assertion
 rest.sts.saml2.Audiences=Assertion audiences
-rest.sts.saml2.Audiences.help.txt=Values will be used to populate the Audiences of the AudienceRestriction element of the Conditions \
+rest.sts.saml2.Audiences.help=Values will be used to populate the Audiences of the AudienceRestriction element of the Conditions \
   element. See section 4.1.4.2 of http://docs.oasis-open.org/security/saml/v2.0/saml-profiles-2.0-os.pdf for details.
 saml2_attribute_map=Specification of mapped attributes
 rest.sts.saml2.AttributeMap=Attribute Mappings
-rest.sts.saml2.AttributeMap.help.txt=Contains the mapping of saml attribute names (Map keys) to local OpenAM attributes (Map values) in \
+rest.sts.saml2.AttributeMap.help=Contains the mapping of saml attribute names (Map keys) to local OpenAM attributes (Map values) in \
   various stores. The DefaultAttributeMapper looks at profile attributes in various places: \
   LDAP or SQL, depending on data store setup, or in Session properties. The keys will define the name of the attributes \
   included in the Assertion Attribute statements, and the data pulled from the subject's directory entry or session state \
   corresponding to the map value will define the value corresponding to this attribute name. If the attribute value is \
   enclosed in quotes, that quoted value will be included in the attribute without mapping. Binary attributes should be \
   followed by ';'.
+rest.sts.saml2.nameidformat.unspecified=urn:oasis:names:tc:SAML:1.0:nameid-format:unspecified
+rest.sts.saml2.nameidformat.entity=urn:oasis:names:tc:SAML:2.0:nameid-format:entity
+rest.sts.saml2.nameidformat.email=urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress
+rest.sts.saml2.nameidformat.encrypted=urn:oasis:names:tc:SAML:2.0:nameid-format:encrypted
+rest.sts.saml2.nameidformat.persistent=urn:oasis:names:tc:SAML:2.0:nameid-format:persistent
+rest.sts.saml2.nameidformat.transient=urn:oasis:names:tc:SAML:2.0:nameid-format:transient
+rest.sts.saml2.nameidformat.x509=urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName
+rest.sts.saml2.nameidformat.windowsdomain=urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName
+rest.sts.saml2.nameidformat.kerberos=urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos
+rest.sts.general.section.title=General Configuration
+rest.sts.issuerName=The issuer name
+rest.sts.issuerName.help.txt=Will appear in the Issuer element of issued SAML2 assertions
+rest.sts.tokentransforms=Supported Token Transforms
+rest.sts.tranform.unt.saml2.true=UNT->SAML2;invalidate interim OpenAM session
+rest.sts.tranform.unt.saml2.false=UNT->SAML2;don't invalidate interim OpenAM session
+rest.sts.tranform.oidc.saml2.true=OPENIDCONNECT->SAML2;invalidate interim OpenAM session
+rest.sts.tranform.oidc.saml2.false=OPENIDCONNECT->SAML2;don't invalidate interim OpenAM session
+rest.sts.tranform.openam.saml2.true=OPENAM->SAML2;invalidate interim OpenAM session
+rest.sts.tranform.openam.saml2.false="OPENAM->SAML2;don't invalidate interim OpenAM session
+rest.sts.tokentransforms.help=In X->Y, X refers to the input token type, and Y refers to the output token type \
+  (currently limited to SAML2). The (don't) invalidate interim OpenAM session specifies whether the interim OpenAM session, \
+  created during the authentication of the presented input token type, should be invalidated following the creation of the \
+  output token type.
+rest.sts.deployment.section.title=Deployment Configuration
+rest.sts.deployment.realm=Deployment Realm
+rest.sts.deployment.realm.help=Realm must exist. STS endpoint url will composed of rest-sts/realm/uriElement
+rest.sts.deployment.UrlElement=Deployment Url Element
+rest.sts.deployment.UrlElement.help=STS endpoint Url will be composed of rest-sts/realm/uriElement
+rest.sts.deployment.AuthTargetMappings=Authentication Target Mappings
+rest.sts.deployment.AuthTargetMappings.help=Each deployed STS is configured with the authentication targets for each \
+  input token type for each supported token transformation. For example, if the transformation \
+  OPENIDCONNECT->SAML2 is supported, the STS instance must be configured with information specifying which elements of \
+  the OpenAM restful authentication context needs to be consumed to validate the OPENIDCONNECT token. The elements of the\
+  configuration tuple are separated by ';'. The first element is the input token type in the token transform: i.e.\
+  X509CERT, OPENIDCONNECT, USERNAME, or OPENAM. The second element is the authentication target - i.e. either 'module' \
+  or 'service', and the third element is the name of the authentication module or service. The fourth (optional) element provides \
+  the STS authentication context information about the to-be-consumed authentication context. If the Open Id Connect \
+  authetentication module is to be consumed, a client must know the name of the header/cookie element where the Open Id Connect \
+  Id token will be placed. For this example, the following string would define these configurations: \
+  OPENIDCONNECT;module;oidc;oidc_id_token_auth_target_header_key=oidc_id_token. In this case, 'oidc' is the name of the \
+  Open Id Connect authentication module created to authenticate Open Id Connect tokens.
